# remote-ai-connector

./: .gitignore  README.md  concept.md  go.mod
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-22-racd-core.md  2026-04-22-racx-core.md
docs/superpowers/specs/: 2026-04-22-remote-ai-connector-design.md
racd/: README.md  pyproject.toml
racd/examples/: racd-config.yaml.example
racd/src/racd/: __main__.py  app.py  auth.py  config.py  core.py  executor_client.py  mcp_facade.py  openapi_facade.py  schemas.py
racd/tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_core.py  test_e2e.py  test_executor_client.py  test_mcp_facade.py  test_openapi_facade.py  test_schemas.py
racx/: README.md  go.mod
racx/cmd/racx/: main.go  main_smoke_test.go
racx/internal/audit/: logger.go  logger_test.go
racx/internal/fs/: binary.go  binary_test.go  denylist.go  denylist_test.go  gitignore.go  gitignore_test.go  sandbox.go  sandbox_test.go  visibility.go  visibility_test.go
racx/internal/server/: handlers.go  server.go  server_test.go
racx/internal/tools/: dir.go  dir_test.go  grep.go  grep_test.go  read.go  read_test.go  tree.go  tree_test.go  types.go
test_symlink/: test.go
test_symlink/root/: link
